// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders hidden toggle correctly 1`] = `
<div
  className="ms-Toggle is-enabled"
  hidden={true}
>
  <div
    className="ms-Toggle-innerContainer"
  >
    <button
      aria-checked={false}
      className="ms-Toggle-background"
      data-is-focusable={true}
      data-ktp-target={true}
      hidden={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="ms-Toggle-thumb"
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly 1`] = `
<div
  className="ms-Toggle is-enabled"
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    Label
  </label>
  <div
    className="ms-Toggle-innerContainer"
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className="ms-Toggle-background"
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="ms-Toggle-thumb"
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly with inline label (JSX Element) 1`] = `
<div
  className="ms-Toggle is-enabled"
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    <p>
      Label
    </p>
  </label>
  <div
    className="ms-Toggle-innerContainer"
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className="ms-Toggle-background"
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="ms-Toggle-thumb"
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly with inline label (string) 1`] = `
<div
  className="ms-Toggle is-enabled"
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    Label
  </label>
  <div
    className="ms-Toggle-innerContainer"
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className="ms-Toggle-background"
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="ms-Toggle-thumb"
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly with inline label and on/off text provided 1`] = `
<div
  className="ms-Toggle is-enabled"
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    Label
  </label>
  <div
    className="ms-Toggle-innerContainer"
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label Toggle0-stateText"
      className="ms-Toggle-background"
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="ms-Toggle-thumb"
      />
    </button>
    <label
      className=
          ms-Label
          ms-Toggle-stateText
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="Toggle0"
      id="Toggle0-stateText"
    >
      Off
    </label>
  </div>
</div>
`;
